# usvfs

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  linting.yml
cmake/: config.cmake.in
include/: sharedparameters.h  usvfs.h  usvfs_version.h  usvfsparameters.h  usvfsparametersprivate.h
include/usvfs/: sharedparameters.h  usvfs.h  usvfs_version.h  usvfsparameters.h  usvfsparametersprivate.h
licenses/: asmjit.txt  cppformat.txt  spdlog.txt
src/shared/: CMakeLists.txt  addrtools.h  debug_monitor.cpp  debug_monitor.h  directory_tree.cpp  directory_tree.h  exceptionex.cpp  exceptionex.h  formatters.h  loghelpers.cpp  loghelpers.h  ntdll_declarations.cpp  ntdll_declarations.h  pch.h  shared_memory.h  shmlogger.cpp  shmlogger.h  stringcast.cpp  stringcast.h  stringcast_basic.h  stringcast_win.h  stringutils.cpp  stringutils.h  test_helpers.cpp  test_helpers.h  tree_container.h  unicodestring.cpp  unicodestring.h  wildcard.cpp  wildcard.h  winapi.cpp  winapi.h  windows_error.cpp  windows_error.h  windows_sane.h
src/thooklib/: CMakeLists.txt  asmjit_sane.h  hooklib.cpp  hooklib.h  ttrampolinepool.cpp  ttrampolinepool.h  udis86wrapper.cpp  udis86wrapper.h  utility.cpp  utility.h
src/tinjectlib/: CMakeLists.txt  asmjit_sane.h  injectlib.cpp  injectlib.h
src/usvfs_dll/: CMakeLists.txt  hookcallcontext.cpp  hookcallcontext.h  hookcontext.cpp  hookcontext.h  hookmanager.cpp  hookmanager.h  maptracker.h  redirectiontree.cpp  redirectiontree.h  semaphore.cpp  semaphore.h  sharedparameters.cpp  stringcast_boost.h  usvfs.cpp  usvfsparameters.cpp  version.rc
src/usvfs_dll/hooks/: file_information_utils.h  kernel32.cpp  kernel32.h  ntdll.cpp  ntdll.h  sharedids.h
src/usvfs_helper/: CMakeLists.txt  inject.cpp  inject.h
src/usvfs_proxy/: CMakeLists.txt  main.cpp  version.rc
test/: CMakeLists.txt
test/fixtures/usvfs_global_test/RedFileSystemTest/: example.cpp
test/fixtures/usvfs_global_test/RedFileSystemTest/expected/mods/HUD Painter/r6/storages/HUDPainter/: DEFAULT.json
test/fixtures/usvfs_global_test/SkipFilesTest/expected/data/docs/: doc.skip
test/fixtures/usvfs_global_test/SkipFilesTest/expected/mods/mod1/: readme.skip
test/fixtures/usvfs_global_test/SkipFilesTest/expected/mods/mod1/docs/: doc.skip
test/fixtures/usvfs_global_test/SkipFilesTest/expected/overwrite/: readme.skip
test/fixtures/usvfs_test/basic/source/: root1.txt  root2w.txt
test/fixtures/usvfs_test/basic/source.postmortem/: root1w.txt  root2.txt
test/fixtures/usvfs_test/basic/source.postmortem/overwrite/mfolder1/newfolder1/: newfile1.txt
test/gtest_utils/: CMakeLists.txt  gtest_utils.cpp  gtest_utils.h
test/shared_test/: CMakeLists.txt  main.cpp
test/test_file_operations/: test_file_operations.cpp  test_filesystem.h  test_ntapi.cpp  test_w32api.cpp
test/test_utils/: CMakeLists.txt  test_helpers.cpp  test_helpers.h
test/thooklib_test/: CMakeLists.txt  main.cpp  test_hooks.cpp
test/tinjectlib_test/: CMakeLists.txt  main.cpp
test/tinjectlib_test/testinject_dll/: main.cpp  main.h
test/tvfs_test/: CMakeLists.txt  main.cpp
test/usvfs_global_test_runner/: CMakeLists.txt  usvfs_global_test_fixture.cpp  usvfs_global_test_fixture.h  usvfs_global_test_runner.cpp
test/usvfs_global_test_runner/usvfs_global_test/: usvfs_global_test.cpp
test/usvfs_test/: usvfs_basic_test.cpp  usvfs_test_base.cpp
test/usvfs_test_runner/: CMakeLists.txt  usvfs_test_runner.cpp
test/usvfs_test_runner/test_file_operations/: test_file_operations.cpp  test_filesystem.cpp  test_filesystem.h  test_ntapi.cpp  test_ntapi.h  test_ntdll_declarations.h  test_w32api.cpp  test_w32api.h
test/usvfs_test_runner/usvfs_test/: usvfs_basic_test.cpp  usvfs_test.cpp  usvfs_test_base.cpp  usvfs_test_base.h
vsbuild/: asmjit.vcxproj  common.props  external_dependencies.props  fmt.vcxproj  platform_x64.props  platform_x86.props  shared.vcxproj  shared.vcxproj.filters  shared_common.props  shared_test.vcxproj  spdlog.vcxproj  stage_helper.cmd  test_common.props  test_file_operations.vcxproj  testinject_bin.vcxproj  testinject_dll.vcxproj  thooklib.vcxproj  thooklib.vcxproj.filters  thooklib_test.vcxproj  tinjectlib.vcxproj  tinjectlib.vcxproj.filters  tinjectlib_test.vcxproj  tvfs_test.vcxproj  udis86.vcxproj  usvfs.sln  usvfs_dll.vcxproj  usvfs_dll.vcxproj.filters  usvfs_global_test.vcxproj  usvfs_global_test.vcxproj.filters  usvfs_global_test_runner.vcxproj  usvfs_global_test_runner.vcxproj.filters  usvfs_helper.vcxproj  usvfs_helper.vcxproj.filters  usvfs_proxy.vcxproj  usvfs_proxy.vcxproj.filters  usvfs_test.vcxproj  usvfs_test_runner.vcxproj
